--- a/index.html
+++ b/index.html
@@ -5,32 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
-	<link rel="shortcut icon" href="ico_lyft.ico">
-	<title>lift</title>
+	<title>PROYECTO</title>
 </head>
 <body>
-<!--***************************************PARTE DEL LOGO DEL LYFT ****************************************-->
-	<header>
-	    <div class="text-center">
-	        <img src="img/lift_logo1.png" class="logo">
-	    </div>
-	</header>
-<!--*********************************PARTE DE LOS BOTONES DE NEXT Y LOG IN********************************-->
-	<section >
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-6 col-sm-6 col-md-6 text-right">
-					<a style="text-decoration: none; " href=""><button class="btn_log ">Log In</button></a>
-				</div>
-				<div class=" col-xs-6 col-sm-6 col-md-6 text-left">
-					<a style="text-decoration: none;" href="sign-up.html"><button class="btn_sign ">Sign up </button></a>
-				</div>
-			</div>
-		</div>
-	</section>
-<!--***************************************************FIN*************************************************-->
+
 </body>
 </html>
